--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1399,7 +1399,7 @@ for which reasoning does not improve data quality in any obvious sense.
 %
 %Data containing the triples \ms{Yoda a Jedi ; laserSwordColor 'blue'} is valid, 
 %whereas data including the triples \ms{DarthMaul a Jedi ; laserSwordColor 'red'} is invalid.
-With the constraint type {\em Context-Specific Exclusive OR of Properties} (\emph{R-11}) 
+With the constraint type {\em context-specific exclusive or of properties} (\emph{R-11}) 
 it can be defined that an individual can either have property A or property B, but not both.
 Identifiers of \emph{publications}, e.g., can either be ISBNs (for books) or ISSNs (for periodical publications), but it should not be possible to assign both identifiers to a given \emph{publication}:
 \begin{center}
@@ -1661,9 +1661,10 @@ some constraint types in $\mathcal{CT}_R$ are not only expressible by \emph{OWL 
 		\end{tabular}
 	\label{tab:constraint-type-specific-expressivity}
 \end{table}
-In total, there are 42 $\overline{\mathcal{CT}_R}$ and 32 $\mathcal{CT}_R$ constraint types (see Table \ref{tab:constraint-type-specific-expressivity}).
+Table \ref{tab:constraint-type-specific-expressivity} displays how many of the overall 42 $\overline{\mathcal{CT}_R}$ and 32 $\mathcal{CT}_R$ constraint types are expressible by listed constraint languages.
+%In total, there are 42 $\overline{\mathcal{CT}_R}$ and 32 $\mathcal{CT}_R$ constraint types (see Table \ref{tab:constraint-type-specific-expressivity}).
 %In Table \ref{tab:constraint-type-specific-expressivity}, the total amount of constraint types per constraint type specific expressivity is shown by numbers in round brackets in the first column.
-Numbers in parentheses in table cells indicate the number of constraint types which may be expressed by a particular constraint language - either by limitations, workarounds, or extensions.  
+Numbers in parentheses indicate the amount of constraint types which may be expressed by a particular constraint language - either by limitations, workarounds, or extensions.  
 %\er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
 Representing {\em context-specific exclusive or of properties} (\emph{R-11}) constraints in \emph{OWL 2 DL}, e.g., can be seen as a workaround 
 as anonymous classes are built for each of the exclusive properties (see Section \ref{RDF-Validation-Requirements-without-Reasoning}).
@@ -1671,18 +1672,34 @@ The following order is derived from the expressivity scores\footnote{Including l
 {\tiny
 \begin{eqnarray*}
 %Expr(\mathcal{C}): ... \\
-Expr(\overline{\mathcal{C}_R}): DSP \prec OWL2QL \prec ReSh \prec ShEx \prec OWL2DL \prec SPIN \\
-Expr(\mathcal{C}_R): DSP \prec OWL2QL \prec ShEx \prec ReSh \prec OWL2DL \prec SPIN
+Expr(\overline{\mathcal{CT}_R}): DSP \prec OWL2QL \prec ReSh \prec ShEx \prec OWL2DL \prec SPIN \\
+Expr(\mathcal{CT}_R): DSP \prec OWL2QL \prec ShEx \prec ReSh \prec OWL2DL \prec SPIN
 \end{eqnarray*}
 }%
-It depends on the individual use case which constraint language to use in order to fulfill related requirements, i.e., to express associated constraint types.
-If, e.g., many constraint types in $\mathcal{CT}_R$ are needed, the constraint language \emph{SPIN} is the most expressive one.
-On the other hand, if only specific requirements in $\overline{\mathcal{CT}_R}$ or $\mathcal{CT}_R$ are needed, 
-it can be more reasonable to use a more compact one like \emph{ShEx}.
 
-For a validation labourer, it is relevant to question the expressivity interrelation between those constraint languages, e.g., "which constraint language could contain the whole \emph{DSP} or  could be used instead?". This can also maintain the future development plans and directions of those languages in the way of achieving to be a solid standard constraint language.
+-----
 
-With the aforementioned concern, let us introduce \emph{Expr(DSP)} which denotes the set of all constraint types which are expressible by \emph{DSP}.  We can consider \emph{Expr(DSP)} as an expressivity class for the constraint language \emph{DSP}. Using the same fashion, one can obtain an expressivity class  per constraint language, which denotes the set of constraint types which  are expressible by that constraint language.
+We determine constraint type specific expressivity scores of
+constraint languages which enable systems to recommend
+languages depending on individual use cases and therefore
+needed constraint types.
+
+-----
+
+Expressivity scores enable validation environments to recommend languages depending on users' individual use cases.
+In order to meet certain use cases particular requirements have to be fulfilled, i.e., constraint types need to be expressed. 
+%These use case determine which language to use in order to fulfill related requirements, i.e., to express associated constraint types.
+If, e.g., many $\mathcal{CT}_R$ constraint types are needed, \emph{SPIN} is the most expressive language (use case 1).
+If only specific $\overline{\mathcal{CT}_R}$ or $\mathcal{CT}_R$ constraint types are needed for a given purpose, 
+it may be more reasonable to use a more compact one like \emph{ShEx} (use case 2).
+
+For a language designer, it is relevant to question the expressivity interrelation between constraint languages, e.g., 
+"which language could contain the whole \emph{DSP} or  could be used instead?". 
+This can also maintain the future development plans and directions of those languages in the way of achieving to be a solid standard constraint language.
+Thus, we introduce \emph{Expr(DSP)} which denotes the set of all constraint types which are expressible by \emph{DSP}.  
+We consider \emph{Expr(DSP)} as an expressivity class for the language \emph{DSP}. 
+Using the same fashion, we obtain one expressivity class per language (see Tables \ref{tab:expressivity-sores-according-to-expressivity-classes-1}-\ref{tab:expressivity-sores-according-to-expressivity-classes-2}).
+If we rank the languages according to their expressivity scores we get the following as a brief picture:
 %\begin{itemize}
 	%\item \emph{Expr(DSP)}: constraints expressible by DSP
 	%\item \emph{Expr(OWL2-DL)}: constraints expressible by OWL2-DL
@@ -1691,7 +1708,7 @@ With the aforementioned concern, let us introduce \emph{Expr(DSP)} which denotes
 	%\item \emph{Expr(ShEx)}: constraints expressible by ShEx
 	%\item \emph{Expr(SPIN)}: constraints expressible by SPIN
 %\end{itemize}
-Table \ref{tab:expressivity-sores-according-to-expressivity-classes} shows the expressivity scores of languages according to expressivity classes again defined by those languages:
+%Tables \ref{tab:expressivity-sores-according-to-expressivity-classes-1}-\ref{tab:expressivity-sores-according-to-expressivity-classes-2} shows the expressivity scores of languages according to expressivity classes again defined by those languages:
 %\begin{center}
 %\begin{evaluation}
 %\emph{Expr(DSP)} (14) & 14 & 13 & 1 & 7(6) & 13 & 13(1) \\
@@ -1750,8 +1767,7 @@ Table \ref{tab:expressivity-sores-according-to-expressivity-classes} shows the e
 		\end{tabular}
 	\label{tab:expressivity-sores-according-to-expressivity-classes-2}
 \end{table}
-
-If we rank them according to their scores, just as before we get the following as a brief picture:
+%If we rank the languages according to their expressivity scores we get the following as a brief picture:
 %{\tiny
 %\begin{eqnarray*} 
 %\emph{Expr(DSP):} OWL2QL \prec ReSh \prec ShEx \preceq OWL2DL \prec SPIN \prec DSP \\
@@ -1772,12 +1788,10 @@ If we rank them according to their scores, just as before we get the following a
 & \emph{Expr(SPIN):} ReSh \prec DSP \prec OWL2QL \prec ShEx \prec OWL2DL \prec SPIN &
 \end{flalign*}
 }%
-
-From Tables \ref{tab:expressivity-sores-according-to-expressivity-classes-1}-\ref{tab:expressivity-sores-according-to-expressivity-classes-2} (with numbers), one important finding is that in terms of expressivity on constraint types, 
-all constraint languages can be fully covered by \emph{SPIN} if we ignore one last constraint type (i.e., the recursive queries which is partly implemented in \emph{SPIN}). 
-Except for \emph{SPIN}, all supported constraint types are already implemented by particular constraint languages.
+One important finding is that all languages can be fully covered by \emph{SPIN} (if we ignore the last constraint type \emph{recursive queries} which is partly implemented in \emph{SPIN}). 
+Except for \emph{SPIN}, all supported constraint types are already implemented by particular languages.
 Yet another interesting message is that, none of other languages covers the other so far in terms of expressivity.
-As we keep the validation requirements updated and those languages are further developed, it is likely that this list will change as well in the direction of needs of the validation community.
+As we keep the RDF validation requirements updated and those languages are further developed, it is likely that this list will change in the direction of needs of the RDF validation community.
 
 %\subsection{Classification Dimension Expressivity [Old]}
 %
